# data-diff-checker

./: .gitignore  LICENSE  README.md  data_diff_checker.py  pyproject.toml
src/data_diff_checker/: __init__.py  __main__.py  cli.py  config.py  differ.py  main.py  progress.py  utils.py
src/diaz_diff_checker/: __init__.py  __main__.py  cli.py  config.py  csv_reader.py  main.py  progress.py  utils.py
tests/: __init__.py  conftest.py  test_csv_reader.py  test_differ.py
tests/fixtures/: basic_dev.csv  basic_prod.csv  composite_key_dev.csv  composite_key_prod.csv  edge_cases_dev.csv  edge_cases_prod.csv  excluded_cols_dev.csv  excluded_cols_prod.csv
